# company-intel-ai

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  prometheus.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 93e4fd47eaf9_initial_schema.py
api/app/: main.py
api/app/api/: deps.py
api/app/api/routes/: auth.py  companies.py  compare.py  notes.py
api/app/core/: config.py  security.py
api/app/db/: session.py  types.py
api/app/models/: __init__.py  company.py  competitor.py  note.py
api/app/observability/: metrics.py
api/app/schemas/: auth.py  company.py  compare.py  report.py
api/app/services/: company_repo.py  pdf_service.py  report_service.py
api/app/services/ai/: __init__.py  gemini_client.py  provider.py  scoring.py  stub_client.py
api/tests/: conftest.py  test_ai_stub.py  test_auth.py  test_companies_create.py  test_companies_crud.py  test_compare.py  test_config.py  test_health.py  test_metrics.py  test_notes.py  test_pdf.py  test_report_service.py  test_scoring.py  test_security.py
docs/superpowers/plans/: 2026-05-08-company-intel-ai.md
docs/superpowers/specs/: 2026-05-08-company-intel-ai-design.md
grafana-provisioning/dashboards/: company-intel.json
ui/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: ProtectedRoute.tsx
ui/src/lib/: api.ts  auth.tsx  types.ts
ui/src/pages/: CompanyDetail.tsx  Compare.tsx  Dashboard.tsx  Login.tsx
(+16 files in other folders)
